lib with java 8